--- a/site/site.yaml
+++ b/site/site.yaml
@@ -55,7 +55,7 @@ meta:
     # a great way of simply adding or modifying properties of a very large
     # number of files.
     nodemeta: meta.yaml
-    ga_tracking_code: XX-XXXXXXXX-X
+    ga_tracking_code: UA-34337252-1
     created: !!timestamp '1978-01-01 00:00:00'
 
 urlcleaner:
