--- a/site/site.yaml
+++ b/site/site.yaml
@@ -55,8 +55,11 @@ meta:
     # a great way of simply adding or modifying properties of a very large
     # number of files.
     nodemeta: meta.yaml
+    title: "Explorer"
+    language: en
     ga_tracking_code: UA-34337252-1
-    created: !!timestamp '1978-01-01 00:00:00'
+    keywords: "mit, high-low tech, shackman press, lettepress, printing, coding, programming, sam jacoby"
+    
 
 urlcleaner:
     index_file_names:
