--- a/site/content/.htaccess
+++ b/site/content/.htaccess
@@ -4,12 +4,13 @@ RewriteBase /
 
 # Don't fix direct file links
 RewriteCond %{REQUEST_FILENAME} !-f
-#
+RewriteCond %{REQUEST_FILENAME} !-d
+
 RewriteCond %{REQUEST_URI} !(.*)/$
 RewriteRule ^(.*)$ $1/ [L,R=301]
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} (.*jpg)/$ 
+RewriteRule ^(.*) $1
 
 RewriteCond %{REQUEST_FILENAME}/index.html -f 
 RewriteRule ^(.*) $1/index.html 
