Sarah had some opinions.

--- a/site/site.yaml
+++ b/site/site.yaml
@@ -84,8 +84,8 @@ sorter:
         reverse: True # if you need the list backwards
     multi:
         attr:
-            - meta.date 
-            - name
+            - meta.weight
+            - meta.date
     date:
         attr: meta.date
         filters: 
