--- a/site/site.yaml
+++ b/site/site.yaml
@@ -136,7 +136,8 @@ grouper:
     #          description: Search Engine Optimization
 
 tagger:
-    sorter: name
+    sorter: date
+    reverse: True
 publisher:
     sftp:
         type: hyde.ext.publishers.pyfs.PyFS
