--- a/site/content/.htaccess
+++ b/site/content/.htaccess
@@ -1,6 +1,8 @@
 RewriteEngine on 
 RewriteBase / 
 
+ErrorDocument 404 /404.html
+
 # Don't fix direct file links
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
