Ah, that's better.

--- a/site/content/.htaccess
+++ b/site/content/.htaccess
@@ -22,6 +22,8 @@ RewriteRule ([^/]*)/$ %{REQUEST_FILENAME}/$1.html
 RewriteCond %{REQUEST_FILENAME}.html -f 
 RewriteRule ^.*$ %{REQUEST_FILENAME}.html 
 
-RewriteCond %{REQUEST_FILENAME}/$1.xml -f 
-RewriteRule ([^/]*)/$ %{REQUEST_FILENAME}/$1.xml 
+RewriteCond %{REQUEST_FILENAME}.xml -f 
+RewriteRule ^.*$ %{REQUEST_FILENAME}.xml 
+
+
 
