--- a/site/site.yaml
+++ b/site/site.yaml
@@ -26,7 +26,7 @@ context:
         author:
             name: Sam Jacoby
             url: "http://samjacoby.com"
-            email: sjacoby@mit.com
+            email: sjacoby@media.mit.com
         this_site:
             title: Sam Jacoby 
             url: "http://samjacoby.com"
