--- a/site/site.yaml
+++ b/site/site.yaml
@@ -27,7 +27,7 @@ context:
         author:
             name: Sam Jacoby
             url: "http://samjacoby.com"
-            email: sjacoby@media.mit.com
+            email: sjacoby@media.mit.edu
         this_site:
             title: Sam Jacoby 
             url: "http://samjacoby.com"
