--- a/site/site.yaml
+++ b/site/site.yaml
@@ -12,7 +12,7 @@ base_url: /
 template: hyde.ext.templates.jinja.Jinja2Template
 plugins:
     - hyde.ext.plugins.meta.MetaPlugin
-#    - hyde.ext.plugins.git.GitDatesPluginOld
+    - hyde.ext.plugins.git.GitDatesPlugin
     - hyde.ext.plugins.gitTracker.GitTrackerPlugin
     - hyde.ext.plugins.auto_extend.AutoExtendPlugin
     - hyde.ext.plugins.urls.UrlCleanerPlugin
