--- a/site/content/.htaccess
+++ b/site/content/.htaccess
@@ -20,7 +20,7 @@ RewriteCond %{REQUEST_FILENAME} (.*jpg)/$
 RewriteRule ^(.*) $1
 
 RewriteCond %{REQUEST_FILENAME} \.jpg$ 
-RewriteRule ^.*\/(.*\.jpg)$ https://s3.amazonaws.com/Shackman/samjacoby.com/$1
+RewriteRule ^.*/media/img/(.*\.jpg)$ https://s3.amazonaws.com/Shackman/samjacoby.com/$1
 
 RewriteCond %{REQUEST_FILENAME}/index.html -f 
 RewriteRule ^(.*) $1/index.html 
